# Test-Driven-Project3

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CodeAnalyzer.sln  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  analysis_request.hpp  cmake_install.cmake  code_analyzer.cpp  code_analyzer.hpp  get_language_from_filename.cpp  get_language_from_filename.hpp  test_code_analyzer.cpp  test_code_analyzer.vcxproj  test_code_analyzer.vcxproj.filters  test_get_language_from_filename.cpp  test_get_language_from_filename.vcxproj  test_get_language_from_filename.vcxproj.filters  xml_wrapper.hpp
test_code_analyzer.dir/Debug/: code_analyzer.nativecodeanalysis.sarif  get_language_from_filename.nativecodeanalysis.sarif  test_code_analyzer.nativecodeanalysis.sarif
test_code_analyzer.dir/Debug/test_cod.67442AA9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
test_get_language_from_filename.dir/Debug/test_get.A334D572.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test_get_language_from_filename.lastbuildstate
